# psession

./: .gitignore  README.md  nb.ipynb  pyproject.toml
data/: data.csv  data.pssession  data.pssession.json
psess_parser/: main.py  parse_pssession.py  parser.py
psess_parser/parsers/: common.py  cv.py  eis.py  lsv.py
psess_parser/util/: util.py
psession/: __init__.py  __main__.py  cli.py  enrichments.py  main.py  measurements.py  parse.py  parser.py
psession/parsers/: common.py  cv.py  eis.py  lsv.py  parser.py
psession/util/: util.py
