[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "psession"
version = "0.1.0"
description = "Parse PalmSens .pssession files into tidy pandas DataFrames"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "psession contributors" }
]
dependencies = [
  "pandas>=1.4",
]

[project.urls]
Homepage = "https://example.com/psession"

[project.scripts]
psession = "psession.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["psession"]
